# crawler-service

./: .gitignore  Dockerfile  build.sh  deploy.sh  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: routes.py  schemas.py
src/app/: main.py
src/config/: settings.py
src/core/: base_crawler.py  config.py  mongodb.py
src/crawlers/: base.py  mail.py  mongo.py  rss.py
src/domain/: models.py
src/infrastructure/: database.py  http.py  logger.py
src/mail/: api.py  crawler.py
tests/: conftest.py  test_api_mail.py  test_api_mongo.py  test_api_rss.py
